--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 </a>
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page"> Home </a>
+                        <a href="/index.html" class="nav-link active" aria-current="page"> Home </a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link"> Search </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"> Insert </a>
+                        <a href="/Insert.php" class="nav-link"> Insert </a>
                     </li>
                 </ul>
             </header>
