--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="/index.html" class="nav-link active" aria-current="page"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"> Search </a>
+                        <a href="/Lavoro/Ricerca.html" class="nav-link"> Search </a>
                     </li>
                     <li class="nav-item">
                         <a href="/Insert.php" class="nav-link"> Insert </a>
@@ -33,7 +33,7 @@
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4"> Scegli l'operazione da svolgere</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="document.location = 'http://localhost/Lavoro/Ricerca.php'"> Cerca </button>
+                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="document.location = 'http://localhost/Lavoro/Ricerca.html'"> Cerca </button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="document.location ='http://localhost/Lavoro/Insert.php'"> Inserisci </button>
                 </div>
                     
