Fix bug time and search everything

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="document.location = 'http://localhost/Lavoro/Ricerca.html'"> Cerca </button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="document.location ='http://localhost/Lavoro/Insert.php'"> Inserisci </button>
+                    <button type="button" class="btn btn-outline-info btn-lg px-4" onclick="document.location = 'http://localhost/Lavoro/SearchAll.php'"> Database </button>
                 </div>
                     
                 </div>
